--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Restaurante</title>
 </head>
 <body>
-    <script src="menu.js"></script>
+    <div>
+        <script src="menu.js"></script>
+    </div>
     <!--
         
     <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\index.js"></script>
