--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Restaurante</title>
 </head>
 <body>
@@ -16,5 +17,12 @@
     <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\cliente.js"></script>
     <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\staff.js"></script>
     -->
+    <div class="ejemplo">
+        <h1>TITULOOOOOOOO</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit ad dolore quo, officia ipsum temporibus id beatae quisquam eaque. Necessitatibus, tenetur quod. Culpa fugit deleniti, consectetur unde optio inventore aut.</p>
+        <img src="C:/Users/david/Documents/PROGRAMACION/WEB/PRACTICAS/MULTIMEDIA/pizza.png" alt="Imagen">
+        
+
+    </div>
 </body>
 </html>
