--- a/index.html
+++ b/index.html
@@ -9,21 +9,10 @@
 </head>
 <body>
     <div>
-        <script src="menu.js"></script>
-    </div>
-    <!--
-        
-    <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\index.js"></script>
-    <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\cliente.js"></script>
-    <script src="C:\Users\david\Documentos\PROGRAMACION\WEB\PRACTICAS\JS\EJERCICIOS\RESTAURANTE\staff.js"></script>
-    -->
-    <div class="ejemplo">
-        <h1>TITULOOOOOOOO</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit ad dolore quo, officia ipsum temporibus id beatae quisquam eaque. Necessitatibus, tenetur quod. Culpa fugit deleniti, consectetur unde optio inventore aut.</p>
-        <img src="C:/Users/david/Documents/PROGRAMACION/WEB/PRACTICAS/MULTIMEDIA/pizza.png" alt="Imagen">
-        <audio src="C:/Users/david/Documents/PROGRAMACION/WEB/PRACTICAS/MULTIMEDIA/505.mp3" controls>505 Artick Monkeys</audio>
-        <p id="lorem">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates harum veniam, perferendis expedita, deserunt debitis molestiae, eius animi fugit iste consectetur voluptatum dolor! Deserunt, fuga voluptate. Amet nobis adipisci nemo?</p>
-
+    <script src="menu.js"></script>    
+    <script src="cliente.js"></script>
+    <script src="staff.js"></script>
+    <script src="index.js"></script>
     </div>
 </body>
 </html>
